deployment-manifest.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviesapi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moviesapi
  template:
    metadata:
      labels:
        app: moviesapi
    spec:
      containers:
      - name: moviesapi_container
        image: ivancekikj/movies-api:latest
        ports:
        - containerPort: 8080
