service-manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: moviesapi-service
  namespace: main
  labels:
    app: moviesapi
spec:
  selector:
    app: moviesapi
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
  type: LoadBalancer
