storage-manifest.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sqlserverdb
spec:
  serviceName: sqlserverdb_service
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
          name: sql
        volumeMounts:
        - name: mssql-data
          mountPath: /var/opt/mssql
      volumes:
      - name: config-volume
        configMap:
          name: sqlserver-config
  volumeClaimTemplates:
  - metadata:
      name: mssql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi

---

apiVersion: v1
kind: Service
metadata:
  name: sqlserverdb_service
spec:
  clusterIP: None
  selector:
    app: sqlserver
  ports:
  - port: 1433
    name: sql
